# python-ponto-de-venda

./: dependencies.py  main.py  pyproject.toml
src/adapters/: category_db_gateway.py  jwt_token_gateway.py  pass_hasher_gateway.py  product_db_gateway.py  user_db_gateway.py
src/domain/entities/: category_model.py  customer_model.py  product_model.py  user_model.py
src/dto/: category_dto.py  login_dto.py  product_dto.py  user_dto.py
src/infra/cryptography/: pass_hasher.py
src/infra/database/: session.py
src/infra/jwt/: jwt_manager.py
src/infra/repositories/: pg_category_repo.py  pg_product_repo.py  pg_user_repo.py
src/routes/: category_router.py  login_router.py  product_router.py  user_router.py
src/service/: category_service.py  login_service.py  product_service.py  user_service.py
src/use_cases/: category_use_case.py  login_use_case.py  product_use_case.py  user_use_case.py
