[project]
name = "py-pdv"
version = "0.1.0"
description = ""
authors = [
    {name = "felipe",email = "felipe.a.melo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]

[dependency-groups]
dev = [
    "sqlmodel (>=0.0.37,<0.0.38)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
